Harmonisation site public Fin

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -216,11 +216,11 @@ footer.page-footer {
 }
 
 .hero-pricing {
-    background: url("../assets/images/handball/Back03.jpg") center 50%;
+    background: url("../assets/images/backHome.jpg") center 40%;
 }
 
 .hero-signup {
-    background: url("../assets/images/handball/Back02.jpeg") center 45%;
+    background: url("../assets/images/backHome.jpg") center 40%;
 }
 
 .hero-signup-end {
