--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -5,6 +5,39 @@
         <h5 class="title hide-on-small-only" translate="pricing.desc"></h5>
     </div>
 </div>
+
+<div class="colorMain-text center-align">
+                <div class="card-title colorAccent-text">
+                    <h3 translate="pricing.offers.standard.title"></h3>
+                </div>
+                <div class="card-content colorBckgModal colorMain-text">
+                    <div class="price center-align">
+                        <h3>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h3>
+                    </div>
+
+                    <h6>
+                    <a class="btn btn-flat btn-large waves-effect waves-light colorAccent white-text"
+                       href="#/signupStart" translate="pricing.subscribe-btn">
+                    </a>
+                    </h6>
+
+                    <div class="divider white container"></div>
+                    <h5 translate="pricing.offers.standard.detail.title"></h5>
+
+                    <ul class="left-align" style="padding-left: 30%;">
+                        <li translate="pricing.offers.standard.detail.line1"></li>
+                        <li translate="pricing.offers.standard.detail.line2"></li>
+                        <li translate="pricing.offers.standard.detail.line3"></li>
+                        <li translate="pricing.offers.standard.detail.line4"></li>
+                        <li translate="pricing.offers.standard.detail.line5"></li>
+                    </ul>
+
+
+                </div>
+            
+    <p class="center-align colorMain-text" translate="pricing.team-subscribe"></p>
+</div>
+
 <div class="pricing colorSecondary white-text">
     <div class="container center-align">
         <div class="row">
@@ -20,45 +53,4 @@
             <div class="col s12">&nbsp;</div>
         </div>
     </div>
-</div>
-
-<div class="colorMain-text">
-    <div class="center-align">
-        <div class="row container">
-            
-            <div class="col s12">
-                <div class="">
-                    <div class="card-title colorAccent-text">
-                        <h3 translate="pricing.offers.standard.title"></h3>
-                    </div>
-                    <div class="card-content colorMain white-text">
-                        <div class="price center-align white-text">
-                            <h3>{{'pricing.offers.standard.price' | translate}} € </h3>
-                            <h4>{{'pricing.offers.standard.period' | translate}}</h4>
-                        </div>
-                        
-                        <h6>
-                        <a class="btn btn-flat btn-large waves-effect waves-light colorAccent white-text"
-                           href="#/signupStart" translate="pricing.subscribe-btn">
-                        </a>
-                        </h6>
-                        
-                        <div class="divider white container"></div>
-                        <h5 translate="pricing.offers.standard.detail.title"></h5>
-                        
-                        <ul class="left-align" style="padding-left: 30%;">
-                            <li translate="pricing.offers.standard.detail.line1"></li>
-                            <li translate="pricing.offers.standard.detail.line2"></li>
-                            <li translate="pricing.offers.standard.detail.line3"></li>
-                            <li translate="pricing.offers.standard.detail.line4"></li>
-                            <li translate="pricing.offers.standard.detail.line5"></li>
-                        </ul>
-
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <p class="center-align colorMain-text" translate="pricing.team-subscribe"></p>
 </div>
