--- a/src/app/modules/commons/users/signup/signupStartDone.html
+++ b/src/app/modules/commons/users/signup/signupStartDone.html
@@ -10,44 +10,46 @@
                          <div class="colorAccent-text">
                              <i class="medium material-icons">verified_user</i>
                          </div>
-                        <h4 class="center" translate="endPage.title"></h4>
+                        <h4 class="center" translate="signupStartDonePage.title"></h4>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col s12">
-                <h5>{{'modalSignupOk.line1' | translate}}</h5>
-                <h5>{{'modalSignupOk.line2' | translate}}</h5>
-                <h5>{{'modalSignupOk.line3' | translate}}</h5>
+                <span style="font-size:1.3em">{{'signupStartDonePage.line1' | translate}}<br>
+                {{'signupStartDonePage.line2' | translate}}<br>
+                {{'signupStartDonePage.line3' | translate}}<br>
+                </span>
                 </div>
             </div>
             <div class="row">
                 <div class="right col s12">
-                	<span class="right">{{'endPage.text.signature' | translate }}</span>
+                	<span class="right">{{'signupStartDonePage.signature' | translate }}</span>
                 </div>
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text colorAccent" ng-click="goHome()"><i class="material-icons left">home</i>{{'endPage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text colorAccent" ng-click="goHome()"><i class="material-icons left">home</i>{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="colorSecondary white-text">
-    <div class="section">
+<div class="colorSecondary">
+    <div class="section white-text">
+
+
         <h5 class="center-align" translate="landing.area-4.content"></h5>
+
         <div class="row">
+            <!-- 
             <span class="col m2 hide-on-small-only">&nbsp;</span>
-            <a href="{{url.apple}}" target="_blank">
-                <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
-            </a>
-            <span class="col m2 hide-on-small-only">&nbsp;</span>
-            <a href="{{url.google}}" target="_blank">
-                <img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
-            </a>
-            <span class="col m2 hide-on-small-only">&nbsp;</span>
+            <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
+            -->
+            <span class="col m5 hide-on-small-only">&nbsp;</span>
+            <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+            <span class="col m5 hide-on-small-only">&nbsp;</span>
         </div>
     </div>
 </div>
