--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -9,7 +9,7 @@
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
-                    <span class="small">{{'profile.label.avatar' | translate }}</span>
+                    <span class="small" translate="profile.label.avatar"></span>
                 </div>
                 <div class="col m7 s12">
                     <br/>
